GLSP-1380: Remove dependency to Guava
Removes the dependency to Google Guava. We mostly used collection creation which can be done with native Java now almost as conveniently. Other than that we only used the BiMap for source model indexing in EMF. While Guavas BIMaps are powerful most of their functionality is not required for our usecases therefore the useage got replaced with a custom BiIndex implementation. 

 - Replaces usage of Lists.newArrayList etc. with Java native calls
 -  Guava Preconditions were only used in two places -> replaced with in method exception handling
- Introduce a `BIIndex` helper class that serves as a replacement for Guavas BIMap in source model indexing
- Add test cases for the new BiIndex
- Update target platforms

Fixes https://github.com/eclipse-glsp/glsp/issues/1380

Contributed on behalf of AxonIvy AG